--- a/index.html
+++ b/index.html
@@ -2,11 +2,11 @@
 <html>
 	<head>
 		<meta charset="utf-8" />
-		<title> Mi Novela Visual</title>
+		<title> Conciencia Covid</title>
 		<script src="renjs.min.js"></script>
 		<script src="boot.js"></script>
 	</head>
-	<body style="margin-top: 0px; margin-bottom: 0px; margin-left: 0px;margin-right: 0px;">
+	<body style="background-color: #1b4038; margin-top: 0px; margin-bottom: 0px; margin-left: 0px;margin-right: 0px;">
 	</body>
 
 </html>
